--- a/dubbo-consumer/pom.xml
+++ b/dubbo-consumer/pom.xml
@@ -104,6 +104,12 @@
             <version>1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
