--- a/dubbo-service/pom.xml
+++ b/dubbo-service/pom.xml
@@ -28,6 +28,13 @@
             <version>1.16.16</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>dubbo-service</finalName>
